--- a/css/style-prepage.css
+++ b/css/style-prepage.css
@@ -1,4 +1,4 @@
-.title{
+.title {
     width: 91%;
     height: 10vh;
     padding-top: 6vh;
@@ -7,24 +7,28 @@
     font-size: 40px;
     font-weight: 500;
 }
-.content{
+
+.content {
     display: flex;
     text-align: center;
     width: 100%;
     height: 28vh;
     justify-content: space-around;
 }
-.avatar-image-left{
+
+.avatar-image-left {
     position: relative;
     height: 18vw;
     width: 18vw;
 }
-.avatar-image-right{
+
+.avatar-image-right {
     position: relative;
     height: 18vw;
     width: 18vw;
 }
-.image-block-left{
+
+.image-block-left {
     position: relative;
     right: 0vw;
     height: 18vw;
@@ -32,7 +36,8 @@
     margin: 0 40px;
     top: 0vw;
 }
-.image-block-right{
+
+.image-block-right {
     position: relative;
     right: 6vw;
     height: 18vw;
@@ -40,28 +45,40 @@
     margin: 0 40px;
     top: 0vw;
 }
-.middle{
+
+.middle {
     position: relative;
     right: 0vw;
     width: 20vw;
     margin: 0 40px;
     bottom: 4vh;
 }
-.middle-image{
+
+.middle-image {
     position: relative;
     left: 5.5vw;
     height: 18vh;
     width: 18vh;
     margin-bottom: 2vh;
 }
-.dialog-block{
+
+.dialog-block-monkey {
     position: relative;
     height: 40vh;
     width: 40vw;
-    top: 20px;
-    left: 60px;
+    top: 2.7vh;
+    left: 0vw;
 }
-.dialog-text{
+
+.dialog-block-dog {
+    position: relative;
+    height: 40vh;
+    width: 40vw;
+    top: 2.7vh;
+    right: 5vw;
+}
+
+.dialog-text-monkey {
     position: absolute;
     height: 30vh;
     width: 30vw;
@@ -70,4 +87,19 @@
     font-size: 22px;
     font-weight: 300;
     line-height: 130%;
+}
+.dialog-text-dog {
+    position: absolute;
+    height: 30vh;
+    width: 30vw;
+    top: 15vh;
+    left: 5.5vw;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 130%;
+}
+
+.dialog-line {
+    display: flex;
+    justify-content: space-around;
 }
