--- a/css/style.css
+++ b/css/style.css
@@ -460,15 +460,14 @@ a:active {
     margin-top: -350px;
 }
 
+/*
 #video1{
-/*    width: 80%;*/
-/*    height: 800px;*/
+    width: 80%;
+    height: 800px;
     float: left;
     position: absolute;
-/*
     margin-left: -210px;
     margin-top: -600px;
-*/
     
 }
 
@@ -483,6 +482,42 @@ video{
     min-width: 920px;
     
 }
+*/
+
+/*
+#video0{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    float: left;
+    margin-left: 20px;
+    max-width: 1100px;  
+}
+*/
+
+video{
+    position: absolute;
+    left: 5%;
+    top: -2%; 
+    width: 70%;
+    height: 100%;
+    max-width: 1050px;
+    min-width: 750px;
+    min-height: 600px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
