--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,8 @@
 @charset "utf-8";
+*{
+    margin: 0;
+    padding: 0;
+}
 html,body,p{
     margin:0;
     padding:0}
@@ -44,7 +48,7 @@ body{
     color:#fff;
     font-size:14px;
     text-align:right;
-    
+
 }
 h1 {
     text-align: center;
@@ -65,4 +69,101 @@ h1 {
     .top-bar{padding:0 40px}
 }
 @media(min-width:1024px){
+}
+
+.navBar{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+}
+
+.nav{
+    width: 500px;
+    height: 40px;
+    margin: 0 auto;
+    margin-top: 10px;
+    background-color: none;
+    color: white;
+}
+
+.nav>li:hover{
+    background-color: rgba(100,100,100);
+}
+
+.nav>li{
+    list-style: none;
+    float: left;
+    width: 100px;
+    height: 40px;
+    background-color: black;
+    margin-left: 20px;
+    text-align: center;
+    line-height: 40px;
+    position: relative;
+}
+
+#about{
+    margin-left: 0px;
+}
+
+.sub{
+    /*不显示元素*/
+    /*display: none;*/
+    width: 100px;
+    position: absolute;
+    left: 0;
+    top: 40px;
+}
+.sub li{
+    width: 100px;
+    list-style: none;
+    background-color: black;
+    transform: rotateY(180deg);
+    transition: all 1s;
+    opacity: 0;
+}
+
+.sub>li:hover{
+    background-color: rgba(100,100,100);
+}
+.nav>li:hover .sub li{
+    transform: none;
+    opacity: 1;
+}
+.nav>li:hover .sub li:nth-child(1){
+    transition-delay: 0ms;
+}
+.nav>li:hover .sub li:nth-child(2){
+    transition-delay: 200ms;
+}
+.nav>li:hover .sub li:nth-child(3){
+    transition-delay: 400ms;
+}
+.nav>li:hover .sub li:nth-child(4){
+    transition-delay: 600ms;
+}
+.nav>li:hover .sub li:nth-child(5){
+    transition-delay: 800ms;
+}
+.nav>li:hover .sub li:nth-child(6){
+    transition-delay: 1000ms;
+}
+
+.nav>li .sub li:nth-child(6){
+    transition-delay: 0ms;
+}
+.nav>li .sub li:nth-child(5){
+    transition-delay: 200ms;
+}
+.nav>li .sub li:nth-child(4){
+    transition-delay: 400ms;
+}
+.nav>li .sub li:nth-child(3){
+    transition-delay: 600ms;
+}
+.nav>li .sub li:nth-child(2){
+    transition-delay: 800ms;
+}
+.nav>li .sub li:nth-child(1){
+    transition-delay: 1000ms;
 }
