--- a/css/style.css
+++ b/css/style.css
@@ -469,14 +469,14 @@ video{
 
 video{
     position: absolute;
-    left: 5%;
+    left: 10%;
     top: -2%;
-    width: 70%;
-    height: 100%;
+    width: 85%;
+    height: 99%;
     /*    margin-top: 1%;*/
-    max-width: 1050px;
-    min-width: 750px;
-    min-height: 600px;
+    /*max-width: 1050px;*/
+    /*min-width: 750px;*/
+    /*min-height: 600px;*/
     z-index: -1;
 }
 
