--- a/css/common.css
+++ b/css/common.css
@@ -82,12 +82,11 @@ h1 {
     height: 40px;
     margin: 0 auto;
     margin-top: 10px;
-    background-color: none;
     color: white;
 }
 
 .nav>li:hover{
-    background-color: rgba(100,100,100);
+    background-color: rgb(100,100,100);
 }
 
 .nav>li{
@@ -124,7 +123,7 @@ h1 {
 }
 
 .sub>li:hover{
-    background-color: rgba(100,100,100);
+    background-color: rgb(100,100,100);
 }
 .nav>li:hover .sub li{
     transform: none;
