--- a/css/style.css
+++ b/css/style.css
@@ -468,11 +468,11 @@ video{
 */
 
 video{
-    position: absolute;
-    left: 10%;
-    top: -2%;
-    width: 85%;
-    height: 99%;
+    position: fixed;
+    left: 40px;
+    top: 10%;
+    width: 100%;
+    height: 80%;
     /*    margin-top: 1%;*/
     /*max-width: 1050px;*/
     /*min-width: 750px;*/
